// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`F.constant is activated synchronously 1`] = `
Array [
  Initial {
    "value": "tsers",
  },
  End {},
  Sync {},
]
`;

exports[`F.constant sends its value to every subscriber 1`] = `
Array [
  Object {
    "s": "a",
    "x": Initial {
      "value": "tsers",
    },
  },
  Object {
    "s": "a",
    "x": End {},
  },
  Object {
    "s": "b",
    "x": Initial {
      "value": "tsers",
    },
  },
  Object {
    "s": "b",
    "x": End {},
  },
]
`;

exports[`F.constant sends single event and ends 1`] = `
Array [
  Initial {
    "value": "tsers",
  },
  End {},
]
`;
